--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,6 @@
 		<module>mysite03</module>
 		<module>mysite04</module>
 		<module>mysite05</module>
+		<module>dffdf</module>
 	</modules>
 </project>
