--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -111,7 +111,7 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
-
+		
 		<!-- fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -127,8 +127,23 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>poscodx-tomcat</server>					
+				</configuration>
+			</plugin>
+		</plugins>
 		<finalName>mysite03</finalName>
-		
 	</build>
 
 </project>
