--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 		<!-- spring mvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -111,7 +117,7 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
