--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -18,6 +18,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- javax annotaion (postConstructor) -->
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
