--- a/mysite04/pom.xml
+++ b/mysite04/pom.xml
@@ -18,6 +18,14 @@
 	</properties>
 
 	<dependencies>
+		
+		<!-- javax annotaion (postConstructor) -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		
 		<!-- spring mvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -126,6 +134,22 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>poscodx-tomcat</server>					
+				</configuration>
+			</plugin>
+		</plugins>
 		<finalName>mysite04</finalName>
 	</build>
 </project>
